--- a/public/css/style.css
+++ b/public/css/style.css
@@ -304,6 +304,11 @@ template {
 [hidden] {
   display: none; }
 
+.break {
+  flex-basis: 100%;
+  height: 0;
+  order: 3; }
+
 /* space-mono-regular - latin */
 @font-face {
   font-family: 'Space Mono';
@@ -378,7 +383,7 @@ template {
   margin: 5vh auto;
   padding: 1rem 1.5rem;
   border-radius: .7rem; }
-  @media (min-width: 992px) {
+  @media (min-width: 1200px) {
     #golem-slate-ui-wrap {
       height: 90vh; } }
   #golem-slate-ui-wrap:after {
@@ -401,7 +406,7 @@ template {
     width: 100%;
     height: 100%;
     flex: 1; }
-    @media (min-width: 992px) {
+    @media (min-width: 1200px) {
       #golem-slate-ui-wrap #golem-slate-container {
         flex-direction: row;
         flex-wrap: wrap; } }
@@ -409,29 +414,49 @@ template {
       width: 100%;
       height: auto;
       padding: 1rem; }
-      @media (min-width: 992px) {
+      @media (min-width: 1200px) {
         #golem-slate-ui-wrap #golem-slate-container .ui-col {
           width: auto;
           height: calc(100% - 60px); } }
       #golem-slate-ui-wrap #golem-slate-container .ui-col.closed {
         flex: 0 0 auto !important;
         font-size: 0; }
+    #golem-slate-ui-wrap #golem-slate-container #golem-slate-nav {
+      width: 100%;
+      order: 1; }
+      @media (min-width: 1200px) {
+        #golem-slate-ui-wrap #golem-slate-container #golem-slate-nav {
+          width: auto; } }
+    #golem-slate-ui-wrap #golem-slate-container .form-control {
+      flex: 1;
+      order: 4; }
+      @media (min-width: 1200px) {
+        #golem-slate-ui-wrap #golem-slate-container .form-control {
+          order: 2; } }
     #golem-slate-ui-wrap #golem-slate-container #golem-slate-filelist {
       display: flex;
       flex-direction: column;
       border-bottom: 1px solid #3D5A80;
+      order: 2;
       transition: flex 0.8s cubic-bezier(0.49, -0.32, 0.25, 1.23); }
-      @media (min-width: 992px) {
+      @media (min-width: 1200px) {
         #golem-slate-ui-wrap #golem-slate-container #golem-slate-filelist {
           border-bottom: none;
           border-right: 1px solid #3D5A80;
           min-width: 15%;
-          max-width: 20%; } }
+          max-width: 20%;
+          order: 3; } }
       #golem-slate-ui-wrap #golem-slate-container #golem-slate-filelist #filelist {
         height: 100%; }
     #golem-slate-ui-wrap #golem-slate-container #golem-slate-editor {
       flex: 1;
-      min-height: 40vh; }
+      min-height: 40vh;
+      order: 3;
+      margin: 0 0 1rem 0; }
+      @media (min-width: 1200px) {
+        #golem-slate-ui-wrap #golem-slate-container #golem-slate-editor {
+          order: 4;
+          margin: 0; } }
       #golem-slate-ui-wrap #golem-slate-container #golem-slate-editor #editor-container {
         width: 100%;
         height: 100%; }
@@ -439,11 +464,12 @@ template {
       border-top: 1px solid #3D5A80;
       transition: flex 0.8s cubic-bezier(0.49, -0.32, 0.25, 1.23);
       flex: 1;
-      min-height: 40vh; }
+      min-height: 40vh;
+      order: 5; }
       #golem-slate-ui-wrap #golem-slate-container #golem-slate-output #output-container {
         width: 100%;
         height: 100%; }
-      @media (min-width: 992px) {
+      @media (min-width: 1200px) {
         #golem-slate-ui-wrap #golem-slate-container #golem-slate-output {
           border-top: none;
           border-left: 1px solid #3D5A80;
@@ -514,22 +540,34 @@ template {
           transform: translate(0, -50%); }
 
 #golem-slate-nav {
-  display: flex;
+  display: inline-flex;
   width: 100%;
-  height: 60px;
-  padding: 0 1rem .5rem;
-  align-items: center;
-  justify-content: space-between; }
+  height: auto;
+  padding: .5rem 1rem .5rem;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap; }
+  @media (min-width: 992px) {
+    #golem-slate-nav {
+      height: 60px;
+      align-items: center;
+      flex-wrap: nowrap; } }
   #golem-slate-nav .logo {
     font-size: .8rem;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: center; }
+    @media (min-width: 992px) {
+      #golem-slate-nav .logo {
+        flex-wrap: wrap; } }
     #golem-slate-nav .logo img {
       display: inline-block;
-      margin-right: 2rem;
+      margin: 0 2rem .8rem 0;
       height: 30px;
       width: auto; }
+      @media (min-width: 992px) {
+        #golem-slate-nav .logo img {
+          margin: 0 2rem 0 0; } }
     #golem-slate-nav .logo span.slate-name {
       display: block;
       white-space: nowrap;
@@ -575,19 +613,32 @@ select:-moz-focusring {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  flex-direction: column; }
-  @media (min-width: 992px) {
+  justify-content: center;
+  flex-direction: column;
+  width: 100%; }
+  @media (min-width: 768px) {
     .form-control {
       flex-direction: row;
-      align-items: center;
+      align-items: flex-end;
+      justify-content: flex-end;
       flex-wrap: nowrap; } }
+  .form-control form {
+    width: 100%; }
+    @media (min-width: 992px) {
+      .form-control form {
+        width: auto; } }
   .form-control .form-group {
     padding: 0 .4rem;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     border: 1px solid #3D5A80;
     border-bottom: none;
-    margin: 0 .4rem; }
+    margin: .5rem 0; }
+    @media (min-width: 992px) {
+      .form-control .form-group {
+        display: inline-flex;
+        margin: 0 .4rem 0 0;
+        width: auto; } }
     .form-control .form-group.no-border {
       border: none !important; }
     .form-control .form-group label {
