--- a/assets/css/imports/_top-nav.scss
+++ b/assets/css/imports/_top-nav.scss
@@ -1,20 +1,32 @@
 #golem-slate-nav{
-     display:flex;
+     display:inline-flex;
      width: 100%;
-     height:60px;       
-     padding:0 1rem .5rem;
-     align-items:center;
+     height:auto;       
+     padding:.5rem 1rem .5rem;
+     align-items:flex-start;
      justify-content:space-between;
+     flex-wrap: wrap;
+     @include media-breakpoint-up(lg){
+        height:60px;
+        align-items:center;
+        flex-wrap: nowrap;
+     }
      .logo{
          font-size:.8rem;
          display:flex;
-         flex-wrap:nowrap;
+         flex-wrap:wrap;
          align-items: center;
+         @include media-breakpoint-up(lg){
+            flex-wrap:wrap;
+         }
          img{
              display:inline-block;
-             margin-right:2rem;
+             margin:0 2rem .8rem 0;
              height:30px;
              width: auto;
+             @include media-breakpoint-up(lg){
+                margin:0 2rem 0 0;
+             }
          }
          span.slate-name{
             display:block;
@@ -25,5 +37,5 @@
             border-left: 1px solid $five;
             padding:.2rem .5rem;
          }
-     }
+    }
 }
