--- a/views/slate.pug
+++ b/views/slate.pug
@@ -12,7 +12,7 @@ block content
                     span.text-five.slate-name
                         | slate: wiggly-obsidian
             include partials/config-form.pug
-            .break
+            .break.col-12
             #golem-slate-filelist.ui-col
                 #filelist
                     include partials/filelist.html
