--- a/views/slate.pug
+++ b/views/slate.pug
@@ -22,6 +22,7 @@ block content
                 #output-container
 
 block append footer
+    script(src="/javascripts/upload.js")
     script(src="/editor/lib/codemirror.js")
     script(src="/editor/mode/javascript/javascript.js")
     script.
